--- a/dotfiles/.config/nvim/coc-settings.json
+++ b/dotfiles/.config/nvim/coc-settings.json
@@ -2,8 +2,9 @@
 	"languageserver": {
     "terraform": {
       "command": "terraform-lsp",
-      "filetypes": ["terraform"],
-      "initializationOptions": {}
+      "filetypes": ["terraform","tf"],
+      "initializationOptions": {},
+      "settings": {}
     },
     "bash": {
       "command": "bash-language-server",
