--- a/windows11/choco/package.config
+++ b/windows11/choco/package.config
@@ -25,4 +25,5 @@
   <package id="screenpresso" />
   <package id="wox" />
   <package id="wireshark" />
+  <package id="office365business" />
 </packages>
