tmux.conf update

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -89,7 +89,7 @@ set -g @tpm_plugins '              \
 # バッファ行数
 set -g history-limit 100000
 
-#set-option -g default-shell "/usr/bin/fish"
+set-option -g default-shell "/usr/bin/fish"
 set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
 
 # dracula options
@@ -99,3 +99,6 @@ set -g @dracula-show-fahrenheit false
 set -g @dracula-show-timezone false
 set -g @dracula-show-flags true
 set -g @dracula-military-time true
+
+# 一括でペインを閉じる
+bind C-q kill-session
