--- a/windows11/choco/package.config
+++ b/windows11/choco/package.config
@@ -26,4 +26,5 @@
   <package id="wox" />
   <package id="wireshark" />
   <package id="office365business" />
+  <package id="tailescale" />
 </packages>
