tmuxコンフィグ修正

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -55,9 +55,13 @@ bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+# Windowの戻る進むのキーバインド
+bind B previous-window
+bind N next-window
+bind L choose-window
 
 # Split window with pane current path
 bind %   split-window -hc "#{pane_current_path}"
