add rocketchat choco

--- a/windows11/choco/package.config
+++ b/windows11/choco/package.config
@@ -27,4 +27,5 @@
   <package id="wireshark" />
   <package id="office365business" />
   <package id="tailescale" />
+  <package id="rocketchat" />
 </packages>
