update helm lsp

--- a/dotfiles/.config/nvim/coc-settings.json
+++ b/dotfiles/.config/nvim/coc-settings.json
@@ -1,5 +1,11 @@
 {
   "languageserver": {
+    "helm": {
+      "command": "helm_ls",
+      "args": ["serve"],
+      "filetypes": ["helm", "helmfile"],
+      "rootPatterns": ["Chart.yaml"]
+    },
     "terraform": {
       "command": "terraform-ls",
       "args": [
