--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -55,6 +55,7 @@ bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
+
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
@@ -70,6 +71,7 @@ bind '"' split-window -vc "#{pane_current_path}"
 #List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-logging' # prefix + shift + pでログ取得
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
@@ -104,5 +106,7 @@ set -g @dracula-show-timezone false
 set -g @dracula-show-flags true
 set -g @dracula-military-time true
 
+
 # 一括でペインを閉じる
 bind C-q kill-session
+
