--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -88,9 +88,11 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-pain-control   \
   tmux-plugins/tmux-cpu   \
   tmux-plugins/dracula/tmux   \
-  tmux-plugins/tmux-resurrect   \
+  tmux-plugins/tmux-continuum  \
 	\
 '
+
+set -g @continuum-restore 'on'
 
 # バッファ行数
 set -g history-limit 100000
@@ -110,3 +112,8 @@ set -g @dracula-military-time true
 # 一括でペインを閉じる
 bind C-q kill-session
 
+# 非アクティブな窓ガラス
+set -g window-style 'fg=colour244,bg=colour234'
+
+# アクティブな窓ガラス
+set -g window-active-style 'fg=white,bg=black'
