--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -1,2 +1,13 @@
 map alt+v paste_from_clipboard
 copy_on_select yes
+shell /usr/bin/fish
+
+# フォントの指定
+font_family FiraCode Nerd Font Mono
+
+# タブのデザイン
+tab_bar_style powerline
+
+
+background_tint 0.7
+background_opacity 0.8
